fix(my-consultations): checkbox is not obvious in dark mode

--- a/src/app/pages/iconsult/staff/my-consultations/my-consultations.page.scss
+++ b/src/app/pages/iconsult/staff/my-consultations/my-consultations.page.scss
@@ -178,3 +178,7 @@ ion-col {
   font-size: 0.9em;
   display: block;
 }
+
+::ng-deep .dark-theme ion-checkbox, .dark-theme.pure ion-checkbox {
+  --border-color: var(--ion-color-medium);
+}
